clusters/proxmox-home/system/kubernetes-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: kubernetes-dashboard/ca-secret
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: kubernetes-dashboard-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dash.mgsds.com
  rules:
    - host: dash.mgsds.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dash-kubernetes-dashboard-web
                port:
                  number: 8000
